[package]
name = "logic-lang"
version = "0.0.2"
description = "structural logic based on equivalence graphs"
authors = ["hrkz <hugo.frezat@gmail.com>"]

keywords = ["logic", "rewriting", "equivalence", "graph"]
edition = "2021"
license = "MIT"
readme = "README.md"

homepage = "https://logic-lang.github.io"
repository = "https://github.com/logic-lang/logic/"

[features]
default = []

# Parsing, validation and generation of symbolic expressions (terms).
logic_lang = []

[dependencies]
rustc-hash = "1.1.0"

[lib]
name = "logic"

[[bin]]
name = "logic"
path = "bin/main.rs"

[[example]]
name = "bool"
path = "examples/bool.rs"
test = true
[[example]]
name = "elem"
path = "examples/elem.rs"
test = true
[[example]]
name = "prog"
path = "examples/prog.rs"
test = true

[package.metadata.docs.rs]
features = [
  "logic_lang",
]
